# wuerfel

./: Cargo.toml  LICENSE  README.md  env.ps1  env.sh
assets/: wuerfel.glb
src/: cli.rs  core.rs  gui.rs  main.rs  text.rs  three_dimensional.rs  tui.rs
